<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_new_diary"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_shedule"
            android:icon="@drawable/ic_new_shedule"
            android:title="@string/menu_shedule" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_new_services"
            android:title="@string/menu_services" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_teachers"
            android:icon="@drawable/ic_new_teachers"
            android:title="@string/menu_TFind"/>
    </group>
    <!--<group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_new_teachers"
            android:title="@string/menu_messages"/>
    </group>-->
</menu>